[gd_scene load_steps=3 format=3 uid="uid://c1qp3clg4qov"]

[ext_resource type="Script" path="res://scenes/play_screen/step_5.gd" id="1_7hfep"]
[ext_resource type="PackedScene" uid="uid://basr5mxkjqjlv" path="res://models/card/visual_card.tscn" id="2_ohkog"]

[node name="Step5" type="BoxContainer"]
script = ExtResource("1_7hfep")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "接待客人"
horizontal_alignment = 1

[node name="VisualCard" parent="HBoxContainer/VBoxContainer" instance=ExtResource("2_ohkog")]
unique_name_in_owner = true
layout_mode = 2
selectable = false

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "需求"
horizontal_alignment = 1

[node name="NeedContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer3/NeedContainer"]
layout_mode = 2
text = "名称"

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer3/NeedContainer"]
layout_mode = 2
text = "食材"

[node name="Label3" type="Label" parent="HBoxContainer/VBoxContainer3/NeedContainer"]
layout_mode = 2
text = "奖励"

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "事件"

[node name="EventContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer4/EventContainer"]
layout_mode = 2
text = "标题"

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer4/EventContainer"]
layout_mode = 2
text = "效果"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SubmitButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "制作美食"

[node name="DiscardButton" type="Button" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "弃牌并放弃"

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/DiscardButton" to="." method="_on_discard_button_pressed"]
